--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 *.class
-.project
-.classpath
+*.log
+
+# other
 .cache
+.classpath
+
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+
 .idea
-.iml
+.idea_modules
+
+.project
